--- a/posts/v1.0.0.md
+++ b/posts/v1.0.0.md
@@ -16,7 +16,7 @@ while maintaining its ultra-lean core. This version is the result of a total
 revamp and a unique collaboration with **Gemini AI**, ensuring every line of
 code is optimized for both humans and machines.
 
-## 🏎️ Performance: ~77,600 Requests/sec
+## Performance: ~77,600 Requests/sec
 
 The primary goal of Fastro is to provide a high-level API without the "framework
 tax." Our latest benchmarks show that Fastro maintains over **94.8%** of native
@@ -44,7 +44,7 @@ We don't parse what you don't use. Objects like `ctx.url` and `ctx.query` are
 lazy-loaded getters. If your handler doesn't touch the query parameters, Fastro
 never spends cycles parsing the search string.
 
-## ✨ Developer Experience: Class-Based API
+## Developer Experience: Class-Based API
 
 In response to community feedback, v1.0.0 introduces a familiar class-based
 constructor:
@@ -62,7 +62,7 @@ await app.serve();
 This pattern provides better IDE discoverability and allows for multiple
 isolated server instances within the same process.
 
-## 🏗️ Built for Scale
+## Built for Scale
 
 Fastro isn't just for "Hello World" apps. We've included advanced features for
 large-scale applications:
@@ -74,7 +74,7 @@ large-scale applications:
 - **Flexible Context**: A unified `ctx` object that flows through middleware,
   allowing for clean state management.
 
-## 🏁 What's Next?
+## What's Next?
 
 We are just getting started. v1.0.0 is our stable foundation. In the coming
 months, we'll be focusing on expanding our built-in middleware ecosystem and
