test: exercise HMR watcher branches and achieve 100% coverage for render middleware

--- a/posts/v1.0.0.md
+++ b/posts/v1.0.0.md
@@ -6,6 +6,8 @@ author: "Fastro Team"
 tags: ["release", "v1.0.0", "announcement"]
 ---
 
+![Fastro](https://repository-images.githubusercontent.com/264308713/1b83bd0f-b9d9-466d-9e63-f947c1a67281)
+
 # Fastro v1.0.0: High Performance by Design
 
 We are thrilled to announce the release of Fastro v1.0.0. This version
