chore: apply test, jwt and manifest fixes; add password hashing and tests

--- a/posts/v1.0.0.md
+++ b/posts/v1.0.0.md
@@ -3,7 +3,7 @@ title: "Fastro v1.0.0: High Performance by Design"
 description: "A deep dive into the architecture and performance features of the new Fastro v1.0.0 release, featuring intelligent LRU caching and lazy parsing."
 date: 2026-02-01
 author: "Fastro Team"
-tags: ["release", "v1.0.0", "announcement"]
+tags: ["release", "general"]
 ---
 
 ![Fastro](https://repository-images.githubusercontent.com/264308713/1b83bd0f-b9d9-466d-9e63-f947c1a67281)
